--- a/config/ldm_cond.yaml
+++ b/config/ldm_cond.yaml
@@ -44,6 +44,7 @@ model:
 
     context_embedder:
       model_name: 'intfloat/multilingual-e5-small'
+      cache_dir: './model/models--intfloat--multilingual-e5-small'
 
 training:
   use_cuda: true
